# cursor-acp-hermes

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
src/cursor_acp_hermes/: __init__.py  __main__.py  acp_adapter.py  cursor_bridge.py  model_router.py  types.py
tests/: test_acp.py  test_debug.py  test_debug2.py  test_integration.py
